Responded to rest of Alison's comments.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -237,7 +237,7 @@ The evolution of this system is sketched out in a van den Heuvel -- style diagra
 
 Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables \citep[massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss,][]{Mennekens:2014}  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kicks}; the possible contribution of double-core common envelopes when unstable mass transfer is initiated between two evolved stars; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2017,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
-\subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}
+\subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}\label{sec:CHE}
 
 \begin{figure}
 	\centering
@@ -245,11 +245,15 @@ Of course, this relatively simple picture holds many uncertainties: the rate of 
 	\caption{\label{fig:chem_homog} A sketch of merging black hole binary formation via the chemically homogeneous evolution channel.}
 \end{figure}
 
-\ajf{This scenario seems to contradict the statement about the separation problem existing at birth, which is pretty confusing -- need to explain why that argument does not apply here.}
+What if some types of massive stars did not expand and converted most of their mass into a black hole? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger; if almost all of the star's mass was converted into a black hole rather than a third to half of the mass which typically becomes the helium core (see \autoref{fig:BHremnant}), the merger timescale would shrink for a given separation, lifting the Roche lobe radius curve in \autoref{fig:Rmax} and removing the ``separation problem at birth''.  No fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries.  This scenario does, however, require some unproven assumptions regarding stellar evolution. But it may be the case that high-mass, low-metallicity stars in close binaries behave exactly as needed for this scenario to work.
 
-What if some types of massive stars did not expand? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger: no fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries. This scenario does, however, require some unproven assumptions regarding stellar evolution. But it may be the case that high-mass, low-metallicity stars in close binaries behave exactly as needed for this scenario to work.
-
-Binary companions raise tides on each other, much like the Moon's tides on Earth.  If a binary is tight enough that each star fills a significant fraction of its Roche lobe, tidal energy dissipation is rapid and proceeds until the stars are tidally locked, i.e. the rotation periods of the stars are synchronized to the orbital period of the binary. This also means that the stars are rotating at a few tens of percent of their break-up velocities.  Such rapidly rotating stars will develop significant temperature gradients between the poles and the equator, which may lead to efficient large-scale meridional circulation within each star \citep{Eddington:1925,Sweet:1950}.  \citet{EndalSofia:1978} and subsequent studies \citep[e.g.,][]{Heger:2000,MaederMeynet:2000,Yoon:2006} explored the internal shears and their impact on the mixing of chemical species within the star.  Although quantitative predictions differ, it appears that rapidly rotating massive stars may efficiently transport hydrogen into the core and helium out into the envelope until nearly all of the hydrogen in the star is fused into helium.  Then, at the end of the main sequence, the star behaves essentially as a Wolf-Rayet naked helium star, contracting rather than expanding. As long as the metallicity is sufficiently low that the wind-driven mass loss does not significantly widen the binary -- which would lead to the loss of co-rotation and chemically homogeneous evolution \citep{deMink:2009} -- the binary can avoid mass transfer.  \citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive gravitational-wave sources (such as GW150914), though not the lowest-mass systems.  This evolutionary pathway is sketched out in \autoref{fig:chem_homog}.\ajf{say this up front and refer to panels of figure in the discussion above! doesn't have to be an enumerated list}
+This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
+\begin{itemize}
+\item{a.} Binary companions raise tides on each other, much like the Moon's tides on Earth.  If a binary is tight enough that each star fills a significant fraction of its Roche lobe, tidal energy dissipation is rapid and proceeds until the stars are tidally locked, i.e. the rotation periods of the stars are synchronized to the orbital period of the binary. This also means that the stars are rotating at a few tens of percent of their break-up velocities.  
+\item{b.} Such rapidly rotating stars will develop significant temperature gradients between the poles and the equator, which may lead to efficient large-scale meridional circulation within each star \citep{Eddington:1925,Sweet:1950}.  \citet{EndalSofia:1978} and subsequent studies \citep[e.g.,][]{Heger:2000,MaederMeynet:2000,Yoon:2006} explored the internal shears and their impact on the mixing of chemical species within the star.  Although quantitative predictions differ, it appears that rapidly rotating massive stars may efficiently transport hydrogen into the core and helium out into the envelope until nearly all of the hydrogen in the star is fused into helium.  
+\item{c--e.} Then, at the end of the main sequence, the star behaves essentially as a Wolf-Rayet naked helium star, contracting rather than expanding. As long as the metallicity is sufficiently low that the wind-driven mass loss does not significantly widen the binary -- which would lead to the loss of co-rotation and chemically homogeneous evolution \citep{deMink:2009} -- the binary can avoid mass transfer.  
+\item{f.} \citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive gravitational-wave sources (such as GW150914), though not the lowest-mass systems.  
+\end{itemize}
 
 \subsubsection{The black hole matchmaking club: dynamical formation in dense stellar environments}
 
@@ -341,7 +345,7 @@ The mass ratios of merging black hole binaries produced through the isolated bin
 
 Dynamically formed binaries may also favor comparable masses because the heaviest black holes in a cluster are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or an intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
 
-Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}, with perhaps nearly equal mass black holes resulting from the evolution of systems that were in contact (shared mass) on the main sequence \citep{Marchant:2016}.  \ajf{this is not a thing that you've mentioned previously... the chemically homogeneous path description was all about the stars not touching}
+Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citep{Marchant:2016} concluded that nearly equal mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketch out in \autoref{sec:CHE}. 
 
 \subsubsection{Black Hole Spin Magnitudes and Directions}
 The spins of merging black holes may carry imprints of their evolutionary history. 
@@ -368,12 +372,13 @@ The intense radiation from massive stars -- whose luminosities may be a hundred 
 	\centering
 	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
 	\includegraphics[width=0.7\textwidth]{BHremnantdelayed.png}
-	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).\ajf{distinguish between NSs and BHs?}} 
+	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).%\todo{distinguish between NSs and BHs?}
+	} 
 \end{figure}
 
 Forming heavier black holes, like those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity. The yield of merging black holes per unit star-forming mass is also greatest at lowest metallicity, due largely to the reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010}. For the isolated binary channel, delayed stellar expansion at lower metallicity, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.
 
-The above considerations place constraints on the formation time of the systems that produced the observed merging black hole binaries. Most low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. Meanwhile, population synthesis models of the classical formation channel indicate that  the delay time between star formation and merger peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay.  This time delay distribution is consistent with gravitational-wave driven merger time scales for binary separations distributed as $p(a) \propto 1/a$ at double black hole formation (see \autoref{sec:CErates}), but  is robust to moderate changes in separation distribution because of the very steep scaling of the delay time with separation, $\tau \propto a^4$.  A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
+The above considerations place constraints on the formation time of the systems that produced the observed merging black hole binaries. Most low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. Meanwhile, population synthesis models of the classical formation channel indicate that  the delay time between star formation and merger peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay.  This time delay distribution is consistent with gravitational-wave driven merger time scales for binary separations distributed as $p(a) \propto 1/a$ at double black hole formation (see \autoref{sec:CErates}), but  is robust to moderate changes in separation distribution because of the very steep scaling of the delay time with separation, $\tau \propto a^4$.  (Other formation channels, particularly chemically homogeneous evolution, predict very different delay time distributions, potentially providing an additional way to discriminate between formation histories.)  A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
 
   
 
@@ -423,7 +428,7 @@ At the moment, we have a half-dozen observations of merging binary black holes. 
 At the same time, we have the tools in place to create detailed models of stellar and binary evolution and of dynamical interactions under a variety of parametrizable assumptions.  The statistical techniques for analyzing the data and inferring properties directly from the observations, or by comparison with the detailed models, are in place.  Most importantly, we have wonderful detectors which are continuing to improve, and we expect to obtain enough data in the next few years to carry out these analyses.  Perhaps in a few years we will know that all of the channels described here contribute non-negligibly to binary black hole formation; that black holes receive small kicks at birth; and that they spin slowly in merging binaries. We may also have made the first detections of new objects such as $200 M_\odot$ intermediate-mass black holes.
 
 The future of gravitational-wave astronomy holds the thrilling prospect of addressing the inverse problem of massive binary stellar evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their fossilized remnants, we can now use merging black holes --- remnants of massive stars --- to probe the behaviour of those stars, and particularly their evolution in binaries.
-% \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed! \ajf{hmm... needs a better last sentence or two, or we need to have mentioned chirping more previously...!}
+% \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed! 
 
 
 \begin{acknowledgements}
