--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -71,11 +71,12 @@
 %\shorttitle{}
 
 \def\addBham{Institute of Gravitational Wave Astronomy and School of Physics and Astronomy, University of Birmingham, Edgbaston, Birmingham B15 2TT, United Kingdom}
+\def\addMonash{Monash Centre for Astrophysics, School of Physics and Astronomy, Monash University, Clayton, Victoria 3800, Australia}
 
 
 \author{Ilya Mandel}
 \email{imandel@star.sr.bham.ac.uk}
-\affiliation{\addBham}
+\affiliation{\addBham\\ and\\ \addMonash}
 \author{Alison Farmer}
 \affiliation{kW Engineering, Oakland, California, 94612, USA}
 
@@ -372,7 +373,7 @@ The intense radiation from massive stars -- whose luminosities may be a hundred 
 	\centering
 	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
 	\includegraphics[width=0.7\textwidth]{BHremnantdelayed.png}
-	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).%\todo{distinguish between NSs and BHs?}
+	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).  COMPAS sets a compact object mass threshold of $2.5 M_\odot$ between neutron stars and black holes.
 	} 
 \end{figure}
 
