Modifications in response to Fred's comments.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -1,12 +1,3 @@
-@Article{magritte,
-     author    = "Ren\'{e} Magritte",
-     title     = "The Treachery of Images",
-journal = "Los Angeles County Museum of Art",
-     year      = 1929, 
-}
-
-
-
  @ARTICLE{Mandel:2007rates,
 author = {{Mandel}, I. and {Brown}, D.~A. and {Gair}, J.~R. and {Miller}, M.~C.},
     title = "{Rates and Characteristics of Intermediate Mass Ratio Inspirals Detectable by Advanced LIGO}",
@@ -10895,7 +10886,7 @@ archivePrefix = "arXiv",
 @phdthesis{Was:thesis,
   author =       "Michal Was",
   title =        "Searching for gravitational waves associated with gamma-ray bursts in 2009-2010 LIGO-Virgo data",
-  school =       "Laboratoire de lï¿½Acc\'{e}lerateur Lin\'{e}aire, LAL 11-119",
+  school =       "Laboratoire de lÕAcc\'{e}lerateur Lin\'{e}aire, LAL 11-119",
   year =         2011
 }
 
@@ -16975,18 +16966,24 @@ archivePrefix = "arXiv",
 
 @ARTICLE{GW170104,
    author = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Acernese}, F. and 
-	{Ackley}, K. and {Adams}, C. and {Adams}, T. and {Addesso}, P. and et al.},
+	{Ackley}, K. and {Adams}, C. and {Adams}, T. and {Addesso}, P. and 
+	{Adhikari}, R.~X. and {Adya}, V.~B. and et al.},
     title = "{GW170104: Observation of a 50-Solar-Mass Binary Black Hole Coalescence at Redshift 0.2}",
-  journal = {ArXiv e-prints},
+  journal = {Physical Review Letters},
 archivePrefix = "arXiv",
    eprint = {1706.01812},
  primaryClass = "gr-qc",
- keywords = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena},
      year = 2017,
     month = jun,
-   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170601812T},
+   volume = 118,
+   number = 22,
+      eid = {221101},
+    pages = {221101},
+      doi = {10.1103/PhysRevLett.118.221101},
+   adsurl = {http://adsabs.harvard.edu/abs/2017PhRvL.118v1101A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 
 @ARTICLE{Zaldarriaga:2017,
@@ -20249,4 +20246,154 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{CornishRobson:2018,
+   author = {{Cornish}, N. and {Robson}, T.},
+    title = "{The construction and use of LISA sensitivity curves}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1803.01944},
+ primaryClass = "astro-ph.HE",
+ keywords = {Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+     year = 2018,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180301944C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{AntoniniRasio:2016,
+   author = {{Antonini}, F. and {Rasio}, F.~A.},
+    title = "{Merging Black Hole Binaries in Galactic Nuclei: Implications for Advanced-LIGO Detections}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1606.04889},
+ primaryClass = "astro-ph.HE",
+ keywords = {galaxies: nuclei, gravitational waves, stars: black holes},
+     year = 2016,
+    month = nov,
+   volume = 831,
+      eid = {187},
+    pages = {187},
+      doi = {10.3847/0004-637X/831/2/187},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...831..187A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{AntoniniPerets:2012,
+   author = {{Antonini}, F. and {Perets}, H.~B.},
+    title = "{Secular Evolution of Compact Binaries near Massive Black Holes: Gravitational Wave Sources and Other Exotica}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1203.2938},
+ keywords = {binaries: close, Galaxy: center, gravitational waves, stars: kinematics and dynamics},
+     year = 2012,
+    month = sep,
+   volume = 757,
+      eid = {27},
+    pages = {27},
+      doi = {10.1088/0004-637X/757/1/27},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...757...27A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{DucheneKraus:2013,
+   author = {{Duch{\^e}ne}, G. and {Kraus}, A.},
+    title = "{Stellar Multiplicity}",
+  journal = {\araa},
+archivePrefix = "arXiv",
+   eprint = {1303.3028},
+ primaryClass = "astro-ph.SR",
+     year = 2013,
+    month = aug,
+   volume = 51,
+    pages = {269-310},
+      doi = {10.1146/annurev-astro-081710-102602},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ARA%26A..51..269D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Naoz:2016,
+   author = {{Naoz}, S.},
+    title = "{The Eccentric Kozai-Lidov Effect and Its Applications}",
+  journal = {\araa},
+archivePrefix = "arXiv",
+   eprint = {1601.07175},
+ primaryClass = "astro-ph.EP",
+     year = 2016,
+    month = sep,
+   volume = 54,
+    pages = {441-489},
+      doi = {10.1146/annurev-astro-081915-023315},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ARA%26A..54..441N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{SilbeeTremaine:2017,
+   author = {{Silsbee}, K. and {Tremaine}, S.},
+    title = "{Lidov-Kozai Cycles with Gravitational Radiation: Merging Black Holes in Isolated Triple Systems}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1608.07642},
+ primaryClass = "astro-ph.HE",
+ keywords = {binaries: general, black hole physics, gravitational waves, stars: black holes, stars: kinematics and dynamics},
+     year = 2017,
+    month = feb,
+   volume = 836,
+      eid = {39},
+    pages = {39},
+      doi = {10.3847/1538-4357/aa5729},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...836...39S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Antonini:2016,
+   author = {{Antonini}, F. and {Chatterjee}, S. and {Rodriguez}, C.~L. and 
+	{Morscher}, M. and {Pattabiraman}, B. and {Kalogera}, V. and 
+	{Rasio}, F.~A.},
+    title = "{Black Hole Mergers and Blue Stragglers from Hierarchical Triples Formed in Globular Clusters}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1509.05080},
+ keywords = {blue stragglers, galaxies: star clusters: general, gravitational waves},
+     year = 2016,
+    month = jan,
+   volume = 816,
+      eid = {65},
+    pages = {65},
+      doi = {10.3847/0004-637X/816/2/65},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...816...65A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Hoang:2018,
+   author = {{Hoang}, B.-M. and {Naoz}, S. and {Kocsis}, B. and {Rasio}, F.~A. and 
+	{Dosopoulou}, F.},
+    title = "{Black Hole Mergers in Galactic Nuclei Induced by the Eccentric Kozai{\ndash}Lidov Effect}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1706.09896},
+ primaryClass = "astro-ph.HE",
+ keywords = {black hole physics, galaxies: star clusters: general, gravitational waves, stars: kinematics and dynamics },
+     year = 2018,
+    month = apr,
+   volume = 856,
+      eid = {140},
+    pages = {140},
+      doi = {10.3847/1538-4357/aaafce},
+   adsurl = {http://adsabs.harvard.edu/abs/2018ApJ...856..140H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{LiuLai:2018,
+   author = {{Liu}, B. and {Lai}, D.},
+    title = "{Black Hole and Neutron Star Binary Mergers in Triple Systems: Merger Fraction and Spin-Orbit Misalignment}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1805.03202},
+ primaryClass = "astro-ph.HE",
+ keywords = {Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+     year = 2018,
+    month = may,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180503202L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
