--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -229,8 +229,6 @@ When the detection of GW150914 was first announced, many were surprised that it 
 \caption{Maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the COMPAS implementation of single stellar evolution models of \citet{Hurley:2000}.   The star expands from its zero-age main sequence (ZAMS) size onwards through the main sequence (MS), Hertzsprung gap (HG), core Helium burning (CHeB) stages, and the asymptotic giant branch (AGB) for lower-mass stars.  The Roche lobe radius (maximal stellar size beyond which a star would engage in mass transfer \citep{Eggleton:1983}) is plotted for an equal mass circular binary which would have the maximum separation to allow a merger within the age of the Universe (see \autoref{fig:periapsis}) assuming initial mass to compact object mass conversion as in \autoref{fig:BHremnant}.\label{fig:Rmax} }
 \end{figure}
 
-%\todo{Update left panel of plot to show periapsis on horizontal axis.  Take max radial extent plot from Simon?}
-
 \textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} argued that binary compact objects must naturally (albeit  rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe.
 
 Three leading formation scenarios for merging compact-object binaries have been proposed: (i) finely tuned binary evolution that brings the stars closer only after their major expansion phases have passed; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from isolated stars. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers. We explore these three scenarios in more detail below. (We won't discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2017} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.)
@@ -289,7 +287,7 @@ This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 	\caption{\label{fig:dynamical} A sketch of merging black hole binary formation via the dynamical evolution channel.}
 \end{figure}
 
-The last possibility we will describe is that the merging black holes may not have formed in a binary at all.  Instead they formed from the collapse of independent massive stars, but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
+The last possibility we will describe is that the merging black holes may not have formed in \ilya{the same} binary at all.  Instead they formed from the collapse of independent massive stars, but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
 \begin{enumerate}
 \item[a.] Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  
 \item[b.] As the most massive objects in the cluster, the black holes naturally sink toward the cluster center as energy is equipartitioned throughout the cluster in the process known as mass segregation.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favor of the two heavier objects forming a binary.  
@@ -297,9 +295,18 @@ The last possibility we will describe is that the merging black holes may not ha
 \item[e.] If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
 \end{enumerate}
 
-The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \citet{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} and \citet{MillerLauburg:2008} have argued that dynamical formation could also take place in galactic nuclei with and without a massive black hole, respectively (but cf.~\citet{Tsang:2013} for the former).  \citet{Bartos:2016} and \citet{Stone:2016} have described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
+The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \citet{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \ilya{\citet{AntoniniPerets:2012}} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \ilya{\citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favored site for dynamical formation, in part because the high escape velocity makes merger products more likely to be retained.}  \citet{Bartos:2016} and \citet{Stone:2016} have described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
 
-Dynamical formation and isolated binary evolution mechanisms are of course not mutually exclusive; for example, the inner binaries in hierarchical triple systems may evolve as isolated binaries, but may then be brought together more efficiently through Lidov-Kozai oscillations \citep{Lidov:1962,Kozai:1962}; see, e.g., \citet{PeretsKratter:2012,Belczynski:2014VMS}.
+\subsection{\ilya{A team effort: combining multiple interactions}}
+
+\ilya{Of course, the channels outlined above need not be distinct, and the same binary may have benefitted from multiple types of interaction while en route to coalescence.  Black holes brought to merger by dynamical interaction in globular clusters may be part of mass-transferring binaries earlier in their evolutionary history.  Mass-transferring binaries that are too wide at the end of binary evolution to merge in the age of the Universe may be helped along by subsequent dynamical encounters \citep[e.g.,][]{Belczynski:2014VMS}.  The more massive star in an isolated binary may evolve chemically homogeneously, while its less massive companion expands and donates mass \citep{Marchant:2017}.}
+
+\ilya{Hierarchical triple systems, with a tight inner binary and a third companion on a wider outer orbit are a particularly promising combination of the isolated evolution and dynamical formation channels.  A significant fraction of massive stars appear to be born in triples and higher multiplicity systems \citep{DucheneKraus:2013}.  Triples may be formed dynamically through binary--binary scatterings \citep{MillerHamilton:2002b}.  Massive black holes in galactic nuclei or intermediate-mass black holes in globular clusters may also act as effective triple companions.}   
+
+\ilya{When the outer binary's orbit is $\gtrsim 5$ times wider than the inner orbit, the triple will be stable, though it may still be driven to instability by mass loss \citep[e.g.,][]{PeretsKratter:2012}.  If the inner and outer orbits in a stable triple have a high relative inclination angle, the transfer of angular momentum between these orbits can increase the eccentricity of the inner binary while keeping its semi-major axis roughly constant. For suitable initial conditions, these Lidov-Kozai oscillations in eccentricity and orbital inclination \citep{Lidov:1962,Kozai:1962} may lead to a drastic growth in the inner binary's eccentricity \citep[for a review, see][]{Naoz:2016}, reducing the binary's periapsis to the point where gravitational-wave emission becomes efficient, hardening the binary to merger.  Recent arguments that Lidov-Kozai cycles could contribute to binary black hole mergers include \citep{SilbeeTremaine:2017} who explored isolated triples, \citep{Antonini:2016} in the context of dynamically formed triples in globular clusters, and \citep{Hoang:2018} who considered triples with a galactic-center massive black hole as the outer companion.}
+
+
+%Dynamical formation and isolated binary evolution mechanisms are of course not mutually exclusive; for example, the inner binaries in hierarchical triple systems may evolve as isolated binaries, but may then be brought together more efficiently through Lidov-Kozai oscillations \citep{Lidov:1962,Kozai:1962}; see, e.g., \citet{PeretsKratter:2012,Belczynski:2014VMS}.
 
 
 \section{Expected properties of merging systems}\label{merge}
@@ -354,7 +361,7 @@ Here, $f_\textrm{primary} \approx 2 \times 10^{-4}$, lower than the value in the
 
 We can estimate an upper limit on the merger rate of dynamically formed binary black holes by assuming that all black holes in a globular cluster undergo a single merger.  About 1 in a thousand stars are massive enough to become a black hole, so even a relatively large cluster with $2\times 10^6$ stars would produce only 2000 black holes and 1000 mergers.  [Although repeated mergers are possible if the black hole merger product is retained in the cluster and merges again, they are very rare as gravitational-wave recoil kicks are overwhelmingly likely to eject a merger remnant from the cluster \citep{Rodriguez:2018}; in any case, even merging all black holes sequentially would increase this estimate by at most a factor of 2.]  If we imagine that the merger rate is uniform over the $\sim 10$ Gyr--long history of the Universe (if mergers predominantly happened early in the cluster history, the rate in the local Universe would be lower), and with a globular cluster space density of around 1 per Mpc$^3$, the upper limit on the merger rate from this channel is $\sim 1000 \times 10^{-10} \textrm{yr}^{-1} \times 1 \textrm{ Mpc}^{-3} \approx 100$ Gpc$^{-3}$ yr$^{-1}$.
 
-Young massive star clusters could further contribute to this rate \citep[e.g.,][]{Ziosi:2014}, as could galactic nuclear clusters \citep[e.g.,][]{MillerLauburg:2008,Bartos:2016,Stone:2016}.  On the other hand, in practice, the rate is likely to be at least a factor of a few lower for the following reasons.  Firstly, some single black holes will be ejected from the cluster during three-body interactions which harden the binaries.  If the masses of all interacting objects are similar, the ejected object receives a kick that is comparable to the orbital velocity of the binary.  The last scattering interactions must harden the binary to a sufficiently small separation for gravitational-wave emission to take over; this scales with the binary's mass as $a \propto M^{3/4}$ (see \autoref{fig:periapsis} and \citet{Peters:1964}), so the minimal orbital velocity of a binary that can merge in the age of Universe through gravitational-wave emission is $\gtrsim 100$ km s$^{-1}$ and only weakly depends on mass.   This is larger than the typical globular cluster escape velocity, $\lesssim 50$ km s$^{-1}$, so many interlopers, including some black holes, will be ejected.  Secondly, following such a 3-body interaction, the binary itself must recoil in the opposite direction from the ejected single star to conserve momentum; although this recoil velocity is reduced by the ratio of the binary's mass to the interloper mass, typically greater than $2:1$ as the lightest body is ejected, the binary may still be ejected from the cluster before it is sufficiently tight to merge through radiation reaction alone. Finally, if most mergers happen soon after globular cluster formation, the local merger rate would be low as the majority of globular clusters are old \citep{Rodriguez:2016big}.
+Young massive star clusters could further contribute to this rate \citep[e.g.,][]{Ziosi:2014}, as could galactic nuclear clusters \citep[e.g.,][]{MillerLauburg:2008,Bartos:2016,Stone:2016,AntoniniRasio:2016}.  On the other hand, in practice, the rate is likely to be at least a factor of a few lower for the following reasons.  Firstly, some single black holes will be ejected from the cluster during three-body interactions which harden the binaries.  If the masses of all interacting objects are similar, the ejected object receives a kick that is comparable to the orbital velocity of the binary.  The last scattering interactions must harden the binary to a sufficiently small separation for gravitational-wave emission to take over; this scales with the binary's mass as $a \propto M^{3/4}$ (see \autoref{fig:periapsis} and \citet{Peters:1964}), so the minimal orbital velocity of a binary that can merge in the age of Universe through gravitational-wave emission is $\gtrsim 100$ km s$^{-1}$ and only weakly depends on mass.   This is larger than the typical globular cluster escape velocity, $\lesssim 50$ km s$^{-1}$, so many interlopers, including some black holes, will be ejected.  Secondly, following such a 3-body interaction, the binary itself must recoil in the opposite direction from the ejected single star to conserve momentum; although this recoil velocity is reduced by the ratio of the binary's mass to the interloper mass, typically greater than $2:1$ as the lightest body is ejected, the binary may still be ejected from the cluster before it is sufficiently tight to merge through radiation reaction alone. Finally, if most mergers happen soon after globular cluster formation, the local merger rate would be low as the majority of globular clusters are old \citep{Rodriguez:2016big}.
 
 \subsection{System Properties}
 \subsubsection{Masses}
@@ -376,14 +383,14 @@ Chemically homogeneous evolution has a much stronger preference for equal masses
 \subsubsection{Black Hole Spin Magnitudes and Directions}
 The spins of merging black holes may carry imprints of their evolutionary history. 
 
-Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011}.  Meanwhile, the spin directions are likely to be isotropically distributed for dynamically formed binaries \citep[e.g.,][]{Rodriguez:2016spin}.
+Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011}.  Meanwhile, the spin directions are likely to be isotropically distributed for dynamically formed binaries \citep[e.g.,][]{Rodriguez:2016spin}.  \ilya{On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018}.}
 
 Spin magnitudes may also depend sensitively on evolutionary history.  Although a massive star may contain a lot of angular momentum, far in excess of the maximum value allowed for a spinning black hole, the vast majority of that angular momentum will be contained in the outer layers of the star, and can therefore be readily lost through winds or through envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017} or during the supernova itself \citep{Batta:2017,Schroeder:2018}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}, but these observations may suffer from measurement systematics \citep[e.g.,][]{Kawano:2017}.  
 
 Gravitational-wave spin measurements have so far only constrained the average spin component in the direction of the orbital angular momentum: the so-called `effective spin', which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
 
 \subsubsection{Orbital Eccentricities}
-	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain significant eccentricities at merger if their orbits are very tight at formation. Dynamical formation of tight binaries may be possible either through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}, or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
+	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain significant eccentricities at merger if their orbits are very tight at formation. Dynamical formation of tight binaries may be possible  through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}, \ilya{in a fraction of hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}}, or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
 
 
 \subsubsection{Formation Environments}
