Magritte is back!

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20397,3 +20397,9 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@Article{magritte,
+      author    = "Ren\'{e} Magritte",
+      title     = "The Treachery of Images",
+ journal = "Los Angeles County Museum of Art",
+      year      = 1929, 
+ }
