Fixed Was PhD thesis bib entry.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -10886,7 +10886,7 @@ archivePrefix = "arXiv",
 @phdthesis{Was:thesis,
   author =       "Michal Was",
   title =        "Searching for gravitational waves associated with gamma-ray bursts in 2009-2010 LIGO-Virgo data",
-  school =       "Laboratoire de l’Acc\'{e}lerateur Lin\'{e}aire, LAL 11-119",
+  school =       "Laboratoire de l'Acc\'{e}lerateur Lin\'{e}aire, LAL 11-119",
   year =         2011
 }
 
