Responding to Christopher's comments.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -10916,17 +10916,19 @@ archivePrefix = "arXiv",
    author = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Abernathy}, M.~R. and 
 	{Acernese}, F. and {Ackley}, K. and {Adams}, C. and {Adams}, T. and 
 	{Addesso}, P. and {Adhikari}, R.~X. and et al.},
-    title = "{Prospects for Observing and Localizing Gravitational-Wave Transients with Advanced LIGO and Advanced Virgo}",
+    title = "{Prospects for observing and localizing gravitational-wave transients with Advanced LIGO, Advanced Virgo and KAGRA}",
   journal = {Living Reviews in Relativity},
 archivePrefix = "arXiv",
    eprint = {1304.0670},
  primaryClass = "gr-qc",
- keywords = {Data analysis, Gravitational-wave detectors, Gravitational waves, Electromagnetic counterparts},
-     year = 2016,
-    month = feb,
-   volume = 19,
-      doi = {10.1007/lrr-2016-1},
-   adsurl = {http://adsabs.harvard.edu/abs/2016LRR....19....1A},
+ keywords = {Gravitational waves, Gravitational-wave detectors, Electromagnetic counterparts, Data analysis},
+     year = 2018,
+    month = apr,
+   volume = 21,
+      eid = {3},
+    pages = {3},
+      doi = {10.1007/s41114-018-0012-9},
+   adsurl = {http://adsabs.harvard.edu/abs/2018LRR....21....3A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -20403,3 +20405,145 @@ archivePrefix = "arXiv",
  journal = "Los Angeles County Museum of Art",
       year      = 1929, 
  }
+ 
+ @ARTICLE{Podsiadlowski:2002,
+   author = {{Podsiadlowski}, P. and {Rappaport}, S. and {Pfahl}, E.~D.},
+    title = "{Evolutionary Sequences for Low- and Intermediate-Mass X-Ray Binaries}",
+  journal = {\apj},
+   eprint = {astro-ph/0107261},
+ keywords = {Stars: Binaries: Close, Stars: Pulsars: General, Stars: Neutron, Stars: White Dwarfs, X-Rays: Stars},
+     year = 2002,
+    month = feb,
+   volume = 565,
+    pages = {1107-1133},
+      doi = {10.1086/324686},
+   adsurl = {http://adsabs.harvard.edu/abs/2002ApJ...565.1107P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Schnittman:2004,
+   author = {{Schnittman}, J.~D.},
+    title = "{Spin-orbit resonance and the evolution of compact binary systems}",
+  journal = {\prd},
+   eprint = {astro-ph/0409174},
+ keywords = {Post-Newtonian approximation, perturbation theory, related approximations, Wave generation and sources, Relativity and gravitation},
+     year = 2004,
+    month = dec,
+   volume = 70,
+   number = 12,
+      eid = {124020},
+    pages = {124020},
+      doi = {10.1103/PhysRevD.70.124020},
+   adsurl = {http://adsabs.harvard.edu/abs/2004PhRvD..70l4020S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Bogdanovic:2007,
+   author = {{Bogdanovi{\'c}}, T. and {Reynolds}, C.~S. and {Miller}, M.~C.
+	},
+    title = "{Alignment of the Spins of Supermassive Black Holes Prior to Coalescence}",
+  journal = {\apjl},
+   eprint = {astro-ph/0703054},
+ keywords = {Black Hole Physics, Galaxies: Nuclei, Gravitational Waves, Relativity},
+     year = 2007,
+    month = jun,
+   volume = 661,
+    pages = {L147-L150},
+      doi = {10.1086/518769},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...661L.147B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{BardeenPetterson:1975,
+   author = {{Bardeen}, J.~M. and {Petterson}, J.~A.},
+    title = "{The Lense-Thirring Effect and Accretion Disks around Kerr Black Holes}",
+  journal = {\apjl},
+     year = 1975,
+    month = jan,
+   volume = 195,
+    pages = {L65},
+      doi = {10.1086/181711},
+   adsurl = {http://adsabs.harvard.edu/abs/1975ApJ...195L..65B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Gerosa:2013,
+   author = {{Gerosa}, D. and {Kesden}, M. and {Berti}, E. and {O'Shaughnessy}, R. and 
+	{Sperhake}, U.},
+    title = "{Resonant-plane locking and spin alignment in stellar-mass black-hole binaries: A diagnostic of compact-binary formation}",
+  journal = {\prd},
+archivePrefix = "arXiv",
+   eprint = {1302.4442},
+ primaryClass = "gr-qc",
+ keywords = {Numerical studies of black holes and black-hole binaries, Classical black holes, Gravitational waves: theory},
+     year = 2013,
+    month = may,
+   volume = 87,
+   number = 10,
+      eid = {104028},
+    pages = {104028},
+      doi = {10.1103/PhysRevD.87.104028},
+   adsurl = {http://adsabs.harvard.edu/abs/2013PhRvD..87j4028G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{MorenoMendez:2008,
+   author = {{Moreno M{\'e}ndez}, E. and {Brown}, G.~E. and {Lee}, C.-H. and 
+	{Park}, I.~H.},
+    title = "{The Case for Hypercritical Accretion in M33 X-7}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {0809.2146},
+ keywords = {binaries: close, black hole physics, gamma rays: bursts, supernovae: general, X-rays: binaries},
+     year = 2008,
+    month = dec,
+   volume = 689,
+    pages = {L9},
+      doi = {10.1086/593977},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...689L...9M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{IMBBH:O1,
+   author = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Acernese}, F. and 
+	{Ackley}, K. and {Adams}, C. and {Adams}, T. and {Addesso}, P. and 
+	{Adhikari}, R.~X. and {Adya}, V.~B. and et al.},
+    title = "{Search for intermediate mass black hole binaries in the first observing run of Advanced LIGO}",
+  journal = {\prd},
+archivePrefix = "arXiv",
+   eprint = {1704.04628},
+ primaryClass = "gr-qc",
+     year = 2017,
+    month = jul,
+   volume = 96,
+   number = 2,
+      eid = {022001},
+    pages = {022001},
+      doi = {10.1103/PhysRevD.96.022001},
+   adsurl = {http://adsabs.harvard.edu/abs/2017PhRvD..96b2001A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{MoeDiStefano:2017,
+   author = {{Moe}, M. and {Di Stefano}, R.},
+    title = "{Mind Your Ps and Qs: The Interrelation between Period (P) and Mass-ratio (Q) Distributions of Binary Stars}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1606.05347},
+ primaryClass = "astro-ph.SR",
+ keywords = {binaries: close, binaries: general, stars: evolution, stars: formation, stars: massive, stars: statistics},
+     year = 2017,
+    month = jun,
+   volume = 230,
+      eid = {15},
+    pages = {15},
+      doi = {10.3847/1538-4365/aa6fb6},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJS..230...15M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
